# func_adl_servicex_type_generator

./: .gitignore  README.md  pyproject.toml
func_adl_servicex_type_generator/: __init__.py  class_utils.py  data_model.py  generator.py  loader.py  package.py
template/files/: __init__.py  object.py
template/package/: README.md  pyproject.toml
template/package/src/: __init__.py  event_collection.py  func_adl_iterable.py  sx_dataset.py
tests/: test_class_utils.py  test_datamodel.py  test_loader.py  test_package.py  xaod_r21_1.yaml  xaod_r21_small.yaml  xaod_r22_1.yaml  xaod_r25.yaml
