[tool.poetry]
name = "func_adl_servicex_type_generator"
version = "0.1.0"
description = "Type generator for func_adl ServiceX data sources"
authors = ["Gordon Watts <gwatts@uw.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
black = "^21.9b0"

[tool.poetry.scripts]
sx_type_gen = 'func_adl_servicex_type_generator.generator:run'

[tool.pyright]
exclude = ["template"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
